# exchan

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: coverage-checker.yml  nix-test.yml
src/: lib.rs
tests/: cli.rs
