[package]
name = "exchan"
description = "An telephone exchanger for web-phone system"
version = "0.1.0"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://gitlab.com/web-phone/exchan"
license = "MIT"
keywords = ["web-phone", "server"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
macaddr = "1.0.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
surrealdb = { version = "1.4.2", optional = true }
tokio = { version = "1.37.0", features = ["macros", "full"] }

[features]
default = []
with_surrealdb = ["surrealdb"]
